--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }}</title>
-    <link href="http://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -13,12 +13,13 @@
         <header>
             <h1>{{ site.title }}</h1>
         </header>
+        <div style="border-bottom: 1px solid #F4F6F7; margin: 10px 0; padding: 20px; line-height: 1.2em;">서비스를 개발하면서 직면하게 된 문제를 해결하는 과정을 담고 싶습니다.</div>
         <article class="list">
             <ul class="post-list">
                 {{ content }}
 
         <footer>
-            <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
+            <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a> &middot; <a href="https://www.facebook.com/taewoo.kim.3910829">Facebook</a>
         </footer>
     </div>
 </body>
