--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,5 +43,10 @@
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
     </footer>
   </div>
+  <div class="fb-like"
+      data-share="true"
+      data-width="450"
+      data-show-faces="true">
+  </div>
 </body>
 </html>
