--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,23 @@
     <link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
 </head>
 <body>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1566617666966766',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
     <div class="wrapper">
     <nav>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a>
