--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,15 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.7&appId=1566617666966766";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <div class="wrapper">
     <nav>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a>
@@ -62,6 +71,8 @@
         data-width="450"
         data-show-faces="true">
     </div>
+    
+    <div class="fb-comments" data-href="{% post_url %}" data-numposts="5"></div>
 
     <footer>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
