--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,7 @@
         data-show-faces="true">
     </div>
     
-    <div class="fb-comments" data-href="{% post_url %}" data-numposts="5"></div>
+    <div class="fb-comments" data-href="{{ page.url }}" data-numposts="5"></div>
 
     <footer>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
