--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) {return;}
      js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
+     js.src = "//connect.facebook.net/ko_KR/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
@@ -68,11 +68,11 @@
     
     <div class="fb-like"
         data-share="true"
-        data-width="450"
+        data-width="600"
         data-show-faces="true">
     </div>
     
-    <div class="fb-comments" data-href="http://blog.eegg.io/2016/07/14/2.html" data-numposts="5"></div>
+    <div class="fb-comments" data-href="http://blog.eegg.io/2016/07/14/2.html" data-numposts="5" data-width="600"></div>
 
     <footer>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
