--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@
         data-width="600"
         data-show-faces="true">
     </div>
-    
+    {{page.url}}
     <div class="fb-comments" data-href="http://blog.eegg.io/2016/07/14/2.html" data-numposts="5" data-width="600"></div>
 
     <footer>
