--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,8 +71,8 @@
         data-width="600"
         data-show-faces="true">
     </div>
-    {{page.url}}
-    <div class="fb-comments" data-href="http://blog.eegg.io/2016/07/14/2.html" data-numposts="5" data-width="600"></div>
+    
+    <div class="fb-comments" data-href="http://blog.eegg.io{{page.url}}" data-numposts="5" data-width="600"></div>
 
     <footer>
         <a href="/">home</a> &middot; <a href="/feed.xml">feed</a> &middot; <a href="https://tinypress.co/">&lt;3, tinypress</a>
