--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -22,11 +22,16 @@
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) {return;}
      js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
+     js.src = "//connect.facebook.net/ko_KR/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
     <div class="wrapper">
+        <div class="upper">
+            <div class="upper-image" style="transform: translate3d(0px, 0px, 0px); opacity: 1; background-image: url("/assets/images/background-image.jpg");">
+                Upper Image !!
+            </div>
+        </div>
         <header>
             <h1>{{ site.title }}</h1>
             <ul style="display: inline-block;">
