--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -28,7 +28,7 @@
 </script>
     <div class="wrapper">
         <div class="upper">
-            <div class="upper-image" style="transform: translate3d(0px, 0px, 0px); opacity: 1; background-image: url("/assets/images/background-image.jpg");">
+            <div class="upper-image" style="transform: translate3d(0px, 0px, 0px); opacity: 1; background-image: url('/assets/images/background-image.jpg');">
                 Upper Image !!
             </div>
         </div>
