--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -27,7 +27,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
     <div class="upper">
-        <div class="upper-image" style="transform: translate3d(0px, 0px, 0px); opacity: 1; background-image: url('/assets/images/background-image.jpg');">
+        <div class="upper-image" style="background-image: url('/assets/images/background-image.jpg');">
             Upper Image !!
         </div>
     </div>
