--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
+<!-- FB init -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
