--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -28,7 +28,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
     <div class="upper">
-        <div class="upper-image" style="background-image: url('/assets/images/background-image.jpg');">
+        <div class="upper-image" style="background-image: url('/assets/images/bg.jpg');">
             Upper Image !!
         </div>
     </div>
