--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,10 +38,10 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
     <div class="wrapper">
-    <nav>
-        <a href="/">home</a> &middot; <a href="/feed.xml">feed</a>
+    <nav style="position: fixed; top: 0; background-color: #dedede; width: 100%; right: 0; height: 30px;">
+        <a href="/">Easter Egg</a>
     </nav>
-    <header>
+    <header style="margin-top: 50px">
         <h1>{{ page.title }}</h1>
         <time>{{ page.date | date_to_string }}</time>
     </header>
