--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -35,10 +35,10 @@
     <div class="wrapper">
         <header>
             <h1>{{ site.title }}</h1>
-            <ul style="display: inline-block;">
-                <li style="text-decoration: none;">About</li>
-            </ul>
         </header>
+        <div class="menubar">
+            <a href="/about.html">About</a>
+        </div>
         <div style="border-bottom: 1px solid #F4F6F7; margin: 10px 0; padding: 20px; line-height: 1.2em;">서비스를 개발하면서 직면하게 된 문제를 해결하는 과정을 담고 싶습니다.</div>
         <article class="list">
             <ul class="post-list">
