--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://raw.githubusercontent.com/EEggii/EEggii.github.io/master/assets/images/bg.jpg"/>
     <title>{{ site.title }}</title>
     <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
