--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://raw.githubusercontent.com/EEggii/EEggii.github.io/master/assets/images/bg.jpg"/>
+    <meta property="og:title" content="__Easter Egg">
+    <meta property="og:description" content="서비스를 개발하면서 직면하게 된 문제를 해결하는 과정을 담고 싶습니다.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/EEggii/EEggii.github.io/master/assets/images/bg.jpg">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <meta property="og:image:type" content="image/jpeg">
     <title>{{ site.title }}</title>
     <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
